# chatbot_e_rpa_pyautogui

./: .gitignore  README.md  chatbot.ipynb  db.sqlite3-shm  db.sqlite3-wal  pyproject.toml  requirements.txt  rpa.ipynb
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
