[project]
name = "chatbot-e-rpa-pyautogui"
version = "0.1.0"
description = "Exemplos sobre: chatbot utilizando ListTrainer e RPA utilizando o pyautogui"
authors = [
    {name = "Marcelo Vasselai",email = "mvasselai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
